# r-exasol

./: .Rbuildignore  .gitattributes  .gitignore  .travis.yml  DESCRIPTION  LICENSE  NAMESPACE  README.md  SECURITY.md  cleanup  configure  configure.ac  db_Test.R  error_code_config.yml  exaodbc.sh.enc  r-exasol.Rproj
.github/workflows/: cpp_test.yml  main.yml  release.yml  release_droid_prepare_original_checksum.yml  release_droid_print_quick_checksum.yml  release_droid_upload_github_release_assets.yml  update_docker_images.yml  windows.yml  windows_ci.yml  windows_macosx.yml
R/: EXADBI-connection.R  EXADBI-datatype.R  EXADBI-driver.R  EXADBI-info.R  EXADBI-internal.R  EXADBI-object.R  EXADBI-query.R  EXADBI-result.R  EXADBI-summary.R  EXADBI-table.R  EXADBI-transaction.R  EXADBI.R  EXAdplyr.R  Viewer.R  catch-routine-registration.R  exa.createScript.R  exa.log.R  exa.readData.R  exa.writeData.R  exasol.R
doc/changes/: changelog.md  changes_0.1.0.md  changes_5.3.0.md  changes_6.0.0.md  changes_6.1.0.md  changes_7.0.0.md  changes_7.0.1.md  changes_7.0.2.md  changes_7.1.0.md  changes_7.2.0.md
doc/developer_guide/: developer_guide.md
doc/developer_guide/images/: r-exasol.odg
examples/: createScript.R  readData.R  writeData.R
inst/COPYRIGHT/notices/: DBI  OpenSSL  R  RODBC
inst/rstudio/: connections.dcf
inst/rstudio/connections/: Exasol Connection.R  Exasol_DSN.R
lib/darwin/i386/: libUnicodeMapping.dylib  libexacli.dylib
lib/darwin/x86_64/: libUnicodeMapping.dylib  libgmp.10.dylib
man/: ALLOWED_UDF_IN_TYPES.Rd  ALLOWED_UDF_OUT_TYPES.Rd  C_asyncEnableTracing.Rd  C_asyncRODBCIOStart.Rd  C_asyncRODBCIsDone.Rd  C_asyncRODBCMax.Rd  C_asyncRODBCProxyHost.Rd  C_asyncRODBCProxyPort.Rd  C_asyncRODBCQueryCheck.Rd  C_asyncRODBCQueryFinish.Rd  C_asyncRODBCQueryStart.Rd  C_run_testthat_tests.Rd  EMITS.Rd  EXAConnection-class.Rd  EXAConnectionLog.Rd  EXADataType.Rd  EXADriver-class.Rd  EXAObject-class.Rd  EXAResult-class.Rd  EXATrace.Rd  EXAupper.Rd  RETURNS.Rd  RODBC-class.Rd  SCALAR.Rd  SET.Rd  dbApply.Rd  dbBegin.Rd  dbClearResult.Rd  dbCommit.Rd  dbConnect.Rd  dbCurrentSchema.Rd  dbDataType.Rd  dbDisconnect.Rd  dbEnd.Rd  dbExistsTable.Rd  dbFetch.Rd  dbGetInfo.Rd  dbGetQuery.Rd  dbGetRowsAffected.Rd  dbHasCompleted.Rd  (+17 more)
src/: Makevars  Makevars.in  Makevars.ucrt  Makevars.win  connection.cpp  connection.h  connection_gen.cpp  connection_gen.h  exasol.c  sources.list  test-example.cpp
src/connection/: ConnectionController.cpp  ConnectionFactoryImpl.cpp
src/connection/protocol/: metaInfoReader.cpp
src/core/: ExaTypes.h  connection_gen.cpp  connection_gen.h  sources.list
src/core/if/: ConnectionController.h  ConnectionException.h  ConnectionFactory.h  ErrorHandler.h  ExaTypes.h  OdbcAsyncExecutor.h  OdbcSessionInfo.h  Reader.h  Socket.h  Writer.h
src/core/impl/: ConnectionContext.h  ConnectionController.cpp  ConnectionFactoryImpl.cpp  ConnectionFactoryImpl.h
src/if/: ConnectionController.h  ConnectionFactory.h  Writer.h
src/odbc/: OdbcAsyncExecutorImpl.cpp  OdbcAsyncExecutorImpl.h  OdbcSessionInfoImpl.cpp  OdbcSessionInfoImpl.h  RODBC.h
src/r-exasol/: ConnectionContext.cpp  ConnectionContext.h  connection_context.cpp  connection_context.h
src/r-exasol/connection/: ConnectionController.cpp  ConnectionController.h  ConnectionException.h  ConnectionFactory.h  ConnectionFactoryImpl.cpp  ConnectionFactoryImpl.h  ErrorHandler.h  OdbcAsyncExecutor.h  OdbcException.h  OdbcSessionInfo.h  connection_controller.cpp  connection_controller.h  connection_factory.h  connection_factory_impl.cpp  connection_factory_impl.h  error_handler.h  odbc_async_executor.h  odbc_session_info.h
src/r-exasol/if/: ConnectionContext.h  ConnectionController.h  ConnectionFactory.h  OdbcAsyncExecutor.h  OdbcException.h
src/r-exasol/impl/: ConnectionContext.cpp
src/r-exasol/odbc/: OdbcAsyncExecutorImpl.cpp  OdbcAsyncExecutorImpl.h  OdbcSessionInfoImpl.cpp  OdbcSessionInfoImpl.h  RODBC.h  RODBCFwd.h  odbc_async_executor_impl.cpp  odbc_async_executor_impl.h  odbc_session_info_impl.cpp  odbc_session_info_impl.h  r_odbc.h
src/r-exasol/rconnection/: ConnectionHook.h  RConnection.h  RReaderConnection.cpp  RReaderConnection.h  RWriterConnection.cpp  RWriterConnection.h  connection_hook.h  r_connection.h  r_reader_connection.cpp  r_reader_connection.h  r_writer_connection.cpp  r_writer_connection.h
src/r_exasol/: connection_context.cpp  connection_context.h  test.cpp
src/rconnection/: RConnection.h  RReaderConnection.cpp  RReaderConnection.h  RWriterConnection.cpp  RWriterConnection.h
src/socket/: SocketImpl.cpp  SocketImpl.h
src/tests/: sources.list  test-reader-writer.cpp  test_reader_writer.cpp  test_runner.cpp
tests/: Dockerfile  execute_docker_test_env.sh  run_test_within_docker.sh  testthat.R
tests/cpp/: CMakeLists.txt  SyncExecutorMock.cpp  SyncExecutorMock.h  SyncSessionMock.cpp  SyncSessionMock.h  algo.cpp  async_tests.cpp  connection_tests.cpp  http_tests.cpp  main.cpp  python_server.py  python_server_tests.py  test_utils.h
tests/cpp/mocks/: AsyncExecutorMock.cpp  AsyncExecutorMock.h  AsyncSessionMock.cpp  AsyncSessionMock.h  CustomAsyncExecutorMock.cpp  CustomAsyncExecutorMock.h  CustomAsyncSessionMock.cpp  CustomAsyncSessionMock.h  CustomMockFunction.h
tests/cpp/python/: python_async_tests.py  python_client_tests.py  python_http_tests.py  python_tests.py  socket_wrapper.py
tests/cran-submission/: Dockerfile  build.sh  run.sh  run_within_docker.sh
tests/scripts/: README.md  build_docker_test_env.sh  check_if_tag_exists.sh  check_push_docker_image.sh  construct_docker_image_complete_name.sh  construct_docker_image_name.sh  construct_docker_runner_image_name.sh  construct_docker_tag_name.sh  execute_docker_test_env.sh  list_tags.sh  pull_docker_image.sh  push_docker_image.sh
tests/testthat/: run-dbi-tests.R  test-Connection.R  test-DBItest-encrypted.R  test-DBItest-unencrypted.R  test-DBItest.R  test-EXADBI.R  test-EXAdplyr.R  test-Encode-Password.R  test-Https.R  test-cpp.R  test-createScript.R  test-readData.R  test-writeData.R
tools/: winlibs.R
(+149 files in other folders)
